# kith

./: API_PLAN.md  Cargo.toml  PLAN.md  PLAN_PHASE_2.md  PLAN_PHASE_3.md  TUI_PLAN.md  config.toml  flake.nix  fly.toml
.github/workflows/: deploy.yml
crates/kith-api/: Cargo.toml
crates/kith-api/src/: error.rs  facts.rs  lib.rs  search.rs  subjects.rs
crates/kith-carddav/: Cargo.toml
crates/kith-carddav/src/: auth.rs  diff.rs  error.rs  etag.rs  lib.rs  main.rs  xml.rs
crates/kith-carddav/src/handlers/: delete.rs  get.rs  mod.rs  options.rs  propfind.rs  put.rs  report.rs
crates/kith-cli/: Cargo.toml
crates/kith-cli/src/: app.rs  client.rs  colors.rs  main.rs
crates/kith-cli/src/ui/: contact_detail.rs  contact_list.rs  mod.rs
crates/kith-core/: Cargo.toml
crates/kith-core/src/: error.rs  fact.rs  lib.rs  lifecycle.rs  store.rs  subject.rs
crates/kith-store-sqlite/: Cargo.toml
crates/kith-store-sqlite/src/: encode.rs  error.rs  lib.rs  schema.rs  store.rs  tests.rs
crates/kith-vcard/: Cargo.toml
crates/kith-vcard/src/: error.rs  lib.rs  parse.rs  serialize.rs
