[workspace]
members  = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
chrono           = { version = "0.4",  features = ["serde"] }
rusqlite         = { version = "0.31", features = ["bundled"] }
serde            = { version = "1",    features = ["derive"] }
serde_json       = "1"
thiserror        = "2"
tokio            = { version = "1",    features = ["full"] }
tokio-rusqlite   = "0.5"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid             = { version = "1",    features = ["v4", "serde"] }
