[workspace]
members = [ "crates/*" ]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
axum = { version = "0.8", features = [ "macros" ] }
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = [ "serde" ] }
clap = { version = "4", features = [ "derive" ] }
config = "0.14"
hex = "0.4"
quick-xml = { version = "0.37", features = [ "serialize" ] }
rand_core = { version = "0.6", features = [ "getrandom" ] }
rusqlite = { version = "0.31", features = [ "bundled" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = [ "full" ] }
tokio-rusqlite = "0.5"
tower = "0.5"
tower-http = { version = "0.6", features = [ "normalize-path", "trace" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
uuid = { version = "1", features = [ "v4", "serde" ] }
