[package]
name    = "kith-carddav"
version.workspace = true
edition.workspace = true

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
kith-core         = { path = "../kith-core" }
kith-vcard        = { path = "../kith-vcard" }
kith-store-sqlite = { path = "../kith-store-sqlite" }
anyhow            = { workspace = true }
argon2            = { workspace = true }
axum              = { workspace = true }
base64            = { workspace = true }
bytes             = { workspace = true }
chrono            = { workspace = true }
clap              = { workspace = true }
config            = { workspace = true }
hex               = { workspace = true }
quick-xml         = { workspace = true }
rand_core         = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
sha2              = { workspace = true }
thiserror         = { workspace = true }
tokio             = { workspace = true }
tower             = { workspace = true, features = ["util"] }
tower-http        = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
uuid              = { workspace = true }

