[package]
edition.workspace = true
name = "kith-carddav"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
argon2 = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
hex = { workspace = true }
kith-core = { path = "../kith-core" }
kith-store-sqlite = { path = "../kith-store-sqlite" }
kith-vcard = { path = "../kith-vcard" }
quick-xml = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true, features = [ "util" ] }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
