[package]
name    = "kith-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kith"
path = "src/main.rs"

[dependencies]
kith-core         = { path = "../kith-core" }
kith-store-sqlite = { path = "../kith-store-sqlite" }
tokio             = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
