[package]
edition.workspace = true
name = "kith-cli"
version.workspace = true

[[bin]]
name = "kith"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
crossterm = "0.28"
fuzzy-matcher = "0.3"
kith-core = { path = "../kith-core" }
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
