[package]
name    = "kith-store-sqlite"
version.workspace = true
edition.workspace = true

[dependencies]
kith-core      = { path = "../kith-core" }
chrono         = { workspace = true }
rusqlite       = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tokio-rusqlite = { workspace = true }
uuid           = { workspace = true }
