[package]
edition.workspace = true
name = "kith-store-sqlite"
version.workspace = true

[dependencies]
chrono = { workspace = true }
kith-core = { path = "../kith-core" }
rusqlite = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rusqlite = { workspace = true }
uuid = { workspace = true }
