[package]
name    = "kith-vcard"
version.workspace = true
edition.workspace = true

[dependencies]
kith-core  = { path = "../kith-core" }
chrono     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
uuid       = { workspace = true }
